Integrate Alpaca API to app and adjust stock price service accordingly